# gx-ai

./: .gitignore  .gitmodules  .readthedocs.yaml  Doxyfile  Makefile  Makefile.depend  Makefile.noah  README.md  bitbucket-pipelines.yml  c_fortran_namelist3.c  courant.cu  coveringSetup.cu  covering_kernel.cu  cudaReduc_kernel.cu  definitions.cu  device_funcs.cu  diagnostics.cu  diagnostics_kernel.cu  energy.cu  energy_ky.cu  everything_else.cu  everything_else.h  exb.cu  exb_kernel.cu  fftderiv1.cu  getfcn.cu  global_vars.h  gryfx.cu  gryfx_lib.cu  gryfx_lib.h  gryfx_lib_dumb.cu  gryfx_run_diagnostics.cu  hyper.cu  init_kernel.cu  local_pointers.cu  main.cu  maxReduc.cu  namelist_defaults.in  nlpm.cu  nlpm_kernel.cu  (+28 more)
GPU_FFT/: fftderiv1.cu  main.cu
GPU_NLPS/: Makefile  main.cu  nlps.cu  nlps_kernel.cu  nlpsold.cu  nlpstest.cu
GPU_ZFFT/: Makefile  main.cu  zderiv.cu  zderivtest.cu  zfft_kernel.cu  zhilbert.cu  zhilberttest.cu
GRFX/: Makefile  advance.cu  c_fortran_namelist.cu  constants.h  courant.cu  covering.cu  coveringRoutines.cu  covering_kernel.cu  energy.cu  energy_ky.cu  getfcn.cu  grfx.cu  (+19 more)
geometry_module/: CMakeLists.txt  README.md
geometry_module/include/: geometric_coefficients.h  parameters.h  vmec_variables.h
geometry_module/src/: geometric_coefficients.cpp  main.cpp  solver.cpp  vmec_variables.cpp
geometry_module/tests/: compare_to_GIST  gist_gs2_wout_st_a34_i32v22_beta_35_scaledAUG.txt_highres_surf12_pol_10_nz0_10000  w7x.ing
geometry_module/tests/fortran_full_surface/: old_geo_coefficients.cu  plot_vmec_to_gs2_geometry_interface_results
(+799 files in other folders)
